// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Full migration should print the same output given the same HTTP requests 1`] = `
Array [
  "Migrating from 98nzfixt/production to 98nzfixt/staging ",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 2`] = `
Array [
  "Found 5 initial documents",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 3`] = `
Array [
  "      + 78 referenced documents",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 4`] = `
Array [
  "Fetched all referenced documents",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 5`] = `
Array [
  "      + 63 source assets",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 6`] = `
Array [
  "Clearing 98nzfixt/staging dataset...",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 7`] = `
Array [
  "Removed 137 documents from 98nzfixt/staging",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 8`] = `
Array [
  "Found 63 new assets to upload",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 9`] = `
Array [
  "Inserting 74 documents into dataset \\"staging\\"",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 10`] = `
Array [
  "Inserted 74 documents",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 11`] = `
Array [
  "Strengthening references..",
]
`;

exports[`Full migration should print the same output given the same HTTP requests 12`] = `
Array [
  "Success! 🎉",
]
`;
